force-app/main/default/objects/TruckFleet__c/fields/ContainerHandlerSubType__c.field-meta.xml
<CustomField>
    <fullName>ContainerHandlerSubType__c</fullName>
    <label>Container Handler Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContainerHandlerSubType</valueSetName>
    </valueSet>
</CustomField>