force-app/main/default/objects/TruckFleet__c/fields/CountryOfManufactured__c.field-meta.xml
<CustomField>
    <fullName>CountryOfManufactured__c</fullName>
    <label>Country of Manufactured</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryList</valueSetName>
    </valueSet>
</CustomField>