force-app/main/default/objects/TruckFleet__c/fields/DateInsurExpire__c.field-meta.xml
<CustomField>
    <fullName>DateInsurExpire__c</fullName>
    <label>DATE OF INSURANCE EXPIRY</label>
    <type>Date</type>
</CustomField>