force-app/main/default/objects/TruckFleet__c/fields/DateInsurRegister__c.field-meta.xml
<CustomField>
    <fullName>DateInsurRegister__c</fullName>
    <label>DATE OF INSURANCE REGISTRATION</label>
    <type>Date</type>
</CustomField>