force-app/main/default/objects/TruckFleet__c/fields/EmptyWeight__c.field-meta.xml
<CustomField>
    <fullName>EmptyWeight__c</fullName>
    <description>Weight when empty</description>
    <inlineHelpText>Weight when empty</inlineHelpText>
    <label>EMPTY WEIGHT(TON)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>