force-app/main/default/objects/TruckFleet__c/fields/EngineChassisNumber__c.field-meta.xml
<CustomField>
    <fullName>EngineChassisNumber__c</fullName>
    <description>ENGINE_SHASSI_NUMBER</description>
    <label>ENGINE/SHASSI NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>