force-app/main/default/objects/TruckFleet__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <label>DATE OF EXPIRY</label>
    <type>Date</type>
</CustomField>