force-app/main/default/objects/TruckFleet__c/fields/FirstRegistrationDate__c.field-meta.xml
<CustomField>
    <fullName>FirstRegistrationDate__c</fullName>
    <label>DATE OF FIRST REGISTRATION</label>
    <type>Date</type>
</CustomField>