force-app/main/default/objects/TruckFleet__c/fields/FuelType__c.field-meta.xml
<CustomField>
    <fullName>FuelType__c</fullName>
    <label>FUEL TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DIESEL</fullName>
            </value>
            <value>
                <fullName>GASOLINE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>