force-app/main/default/objects/TruckFleet__c/fields/GrainCubicCapacity__c.field-meta.xml
<CustomField>
    <fullName>GrainCubicCapacity__c</fullName>
    <label>Grain cubic capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>