force-app/main/default/objects/TruckFleet__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <inlineHelpText>In case of Vessel, input Draught (m) into this field.</inlineHelpText>
    <label>HEIGHT(METER)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>