force-app/main/default/objects/TruckFleet__c/fields/HomePort__c.field-meta.xml
<CustomField>
    <fullName>HomePort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Port</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>TRUCK/FLEET</relationshipLabel>
    <relationshipName>TruckFleet</relationshipName>
    <type>Lookup</type>
</CustomField>