force-app/main/default/objects/TruckFleet__c/fields/InsuranceCoverage__c.field-meta.xml
<CustomField>
    <fullName>InsuranceCoverage__c</fullName>
    <label>INSURANCE COVERAGE</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>