force-app/main/default/objects/TruckFleet__c/fields/InsuranceNumber__c.field-meta.xml
<CustomField>
    <fullName>InsuranceNumber__c</fullName>
    <label>INSURANCE NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>