force-app/main/default/objects/TruckFleet__c/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INSURER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRUCK &amp; FLEET</relationshipLabel>
    <relationshipName>TRUCK_FLEET</relationshipName>
    <type>Lookup</type>
</CustomField>