force-app/main/default/objects/TruckFleet__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>LENGTH(METER)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>