force-app/main/default/objects/TruckFleet__c/fields/MainDriver__c.field-meta.xml
<CustomField>
    <fullName>MainDriver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MAIN DRIVER</label>
    <referenceTo>WORKER__c</referenceTo>
    <relationshipLabel>TRUCK &amp; FLEET</relationshipLabel>
    <relationshipName>TRUCK_FLEET</relationshipName>
    <type>Lookup</type>
</CustomField>