force-app/main/default/objects/TruckFleet__c/fields/ManagingCompany__c.field-meta.xml
<CustomField>
    <fullName>ManagingCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Managing Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRUCK/FLEET (Managing Company)</relationshipLabel>
    <relationshipName>ManagingCompany</relationshipName>
    <type>Lookup</type>
</CustomField>