force-app/main/default/objects/TruckFleet__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRUCK/FLEET (Manufacturer)</relationshipLabel>
    <relationshipName>TruckFleet</relationshipName>
    <type>Lookup</type>
</CustomField>