force-app/main/default/objects/TruckFleet__c/fields/MaximumMeasurement__c.field-meta.xml
<CustomField>
    <fullName>MaximumMeasurement__c</fullName>
    <label>MAXIMUM MEASURMENT(CBM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>