force-app/main/default/objects/TruckFleet__c/fields/ModelCode__c.field-meta.xml
<CustomField>
    <fullName>ModelCode__c</fullName>
    <label>MODEL CODE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>