force-app/main/default/objects/TruckFleet__c/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <label>TRUCK &amp; FLEET PHOTO</label>
    <length>500</length>
    <type>Html</type>
</CustomField>