force-app/main/default/objects/TruckFleet__c/fields/PICPassword__c.field-meta.xml
<CustomField>
    <fullName>PICPassword__c</fullName>
    <label>P.I.C Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>