force-app/main/default/objects/TruckFleet__c/fields/RegisteredOwnerCompany__c.field-meta.xml
<CustomField>
    <fullName>RegisteredOwnerCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registered Owner Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TRUCK/FLEET (Registered Owner Company)</relationshipLabel>
    <relationshipName>RegisteredOwnerCompany</relationshipName>
    <type>Lookup</type>
</CustomField>