force-app/main/default/objects/TruckFleet__c/fields/SummerDeadweightTon__c.field-meta.xml
<CustomField>
    <fullName>SummerDeadweightTon__c</fullName>
    <label>Summer Deadweight(Ton)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>