force-app/main/default/objects/TruckFleet__c/fields/TowedWeight__c.field-meta.xml
<CustomField>
    <fullName>TowedWeight__c</fullName>
    <label>TOWED WEIGHT(TON)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>