force-app/main/default/objects/TruckFleet__c/fields/TruckFleetBarcodeImage__c.field-meta.xml
<CustomField>
    <fullName>TruckFleetBarcodeImage__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl=MECARD:N:&apos; + AssetIdentificationCode__c , &apos;Create Qr Code for this item&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Truck Fleet Barcode Image(OLD)</label>
    <type>Text</type>
</CustomField>