force-app/main/default/objects/TruckFleet__c/fields/VesselType__c.field-meta.xml
<CustomField>
    <fullName>VesselType__c</fullName>
    <label>Vessel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VesselType</valueSetName>
    </valueSet>
</CustomField>