force-app/main/default/objects/TruckFleet__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <inlineHelpText>In case of Vessel, input Beam (m) into this field.</inlineHelpText>
    <label>WIDTH(METER)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>