force-app/main/default/objects/TruckFleet__c/recordTypes/ContainerHandler.recordType-meta.xml
<RecordType>
    <fullName>ContainerHandler</fullName>
    <active>true</active>
    <label>Container Handler</label>
</RecordType>