force-app/main/default/objects/TruckFleet__c/recordTypes/FULL_CONTAINER_CHASSI.recordType-meta.xml
<RecordType>
    <fullName>FULL_CONTAINER_CHASSI</fullName>
    <active>true</active>
    <label>FULL CONTAINER CHASSI</label>
</RecordType>