force-app/main/default/objects/TruckFleet__c/recordTypes/FULL_CONTAINER_TRUCK.recordType-meta.xml
<RecordType>
    <fullName>FULL_CONTAINER_TRUCK</fullName>
    <active>true</active>
    <label>FULL CONTAINER TRUCK</label>
</RecordType>