force-app/main/default/objects/TruckFleet__c/recordTypes/TRUCK.recordType-meta.xml
<RecordType>
    <fullName>TRUCK</fullName>
    <active>true</active>
    <label>TRUCK</label>
</RecordType>