force-app/main/default/objects/TruckFleet__c/recordTypes/WarehouseMHE.recordType-meta.xml
<RecordType>
    <fullName>WarehouseMHE</fullName>
    <active>true</active>
    <description>Material Handling Equipment</description>
    <label>Warehouse MHE</label>
</RecordType>