force-app/main/default/objects/TruckFleet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FleetType__c</columns>
    <columns>RegistrationNumber__c</columns>
    <columns>NumberPlate__c</columns>
    <columns>EngineChassisNumber__c</columns>
    <columns>FirstRegistrationDate__c</columns>
    <columns>ExpiryDate__c</columns>
    <columns>ModelCode__c</columns>
    <columns>ChassisType__c</columns>
    <columns>FuelType__c</columns>
    <columns>MainDriver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>