force-app/main/default/objects/TruckFleet__c/listViews/Barging_Fleet.listView-meta.xml
<ListView>
    <fullName>Barging_Fleet</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>FleetType__c</columns>
    <columns>TEU__c</columns>
    <columns>FirstRegistrationDate__c</columns>
    <columns>RegistrationNumber__c</columns>
    <columns>NumberPlate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselType__c</field>
        <operation>equals</operation>
        <value>Barging</value>
    </filters>
    <label>Barging Fleet</label>
</ListView>